--- a/moveworld/public/css/app.css
+++ b/moveworld/public/css/app.css
@@ -8,6 +8,7 @@
  */
 
 :root {
+  --temple-brack: #212529;
   --blue: #3490dc;
   --indigo: #6574cd;
   --purple: #9561e2;
@@ -18,6 +19,7 @@
   --green: #38c172;
   --teal: #4dc0b5;
   --cyan: #6cb2eb;
+  A
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
@@ -70,9 +72,11 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
-  color: #212529;
+  color:#f66d9b;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-image: url(/../assets/images/paneru.jpg);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -8615,7 +8619,6 @@ button.bg-dark:focus {
 
 .pt-4,
 .py-4 {
-  text-align: -webkit-center; 
   padding-top: 1.5rem !important;
 }
 
@@ -8627,6 +8630,7 @@ button.bg-dark:focus {
 .pb-4,
 .py-4 {
   padding-bottom: 1.5rem !important;
+  text-align: center;
 }
 
 .pl-4,
