--- a/moveworld/public/css/app.css
+++ b/moveworld/public/css/app.css
@@ -8,7 +8,6 @@
  */
 
 :root {
-  --temple-brack: #212529;
   --blue: #3490dc;
   --indigo: #6574cd;
   --purple: #9561e2;
@@ -19,7 +18,6 @@
   --green: #38c172;
   --teal: #4dc0b5;
   --cyan: #6cb2eb;
-  A
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
@@ -72,11 +70,9 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
-  color:#f66d9b;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #212529;
+  color: #212529;
   text-align: left;
-  background-image: url(/../assets/images/paneru.jpg);
+  background-color: #f8fafc;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -8630,7 +8626,6 @@ button.bg-dark:focus {
 .pb-4,
 .py-4 {
   padding-bottom: 1.5rem !important;
-  text-align: center;
 }
 
 .pl-4,
